# smpc_startup

./: README.md
backend/: blockchainParameters.js  contractABI.js  index.js
backend/routes/: example.js
contracts/: nodeRewardsToken.sol  nodeStaking.sol  proxy.sol  reciever.sol  sender.sol
ecdsa_wasm/: Cargo.toml
ecdsa_wasm/src/state_machine/: mod.rs
